# TECA_superbuild

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  mpi4py.cfg.in  teca_env.sh.in  version.cmake
.github/workflows/: develop.yml
docker_env/: README.md
docker_env/fedora28/: Dockerfile
docker_env/ubuntu18_04/: Dockerfile
hdf5/: CMakeLists.txt
modulefiles/: teca.in
site/: make_install_cori_m1517.sh  make_install_perlmutter_m1517.sh
travis_ci/: ctest_linux.cmake  ctest_linux.sh  install_fedora_28.sh  install_fedora_31.sh  install_ubuntu_18_04.sh
udunits/: Makefile.in  configure  version.texi
udunits/lib/: Makefile.in
udunits/lib/xmlFailures/: Makefile.in
udunits/lib/xmlSuccesses/: Makefile.in
udunits/prog/: Makefile.in
